updated secret.yml with new FB production codes

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -11,3 +11,5 @@ development:
 
 production:
   <<: *defaults
+  facebook_APP_ID: 709900169065252
+  facebook_APP_SECRET: 2b2159f4bd9e8b8400d071064777297c
