--- a/config/config.yml
+++ b/config/config.yml
@@ -14,4 +14,5 @@ test:
 
 production:
   <<: *defaults
+  site_name: "SwapArt - development"
   site_domain: "http://shielded-everglades-2939.herokuapp.com/"
