updated filenames and bucket names

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -6,16 +6,15 @@ defaults: &defaults
   facebook_APP_SECRET: 186254b8e75c3b16f576703b13b35e18
   admin_pass: asar5248
 
-  S3_BUCKET_NAME: swapart
   AWS_ACCESS_KEY_ID: AKIAJNU3WUH5CUMKO7HQ
   AWS_SECRET_ACCESS_KEY: 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
 
 development:
   <<: *defaults
-  S3_PATH: development
+  S3_BUCKET_NAME: swapart-development
 
 production:
   <<: *defaults
   facebook_APP_ID: 709900169065252
   facebook_APP_SECRET: 2b2159f4bd9e8b8400d071064777297c
-  S3_PATH: production
+  S3_BUCKET_NAME: swapart
