updated website url

--- a/config/config.yml
+++ b/config/config.yml
@@ -15,4 +15,4 @@ test:
 
 production:
   <<: *defaults
-  site_domain: "http://shielded-everglades-2939.herokuapp.com/"
+  site_domain: "http://www.swapart.co/"
