removed items from seeds in production, added Ilana as admin

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -4,7 +4,7 @@ defaults: &defaults
   email_pass: ssar5248
   facebook_APP_ID: 709901159065153
   facebook_APP_SECRET: 186254b8e75c3b16f576703b13b35e18
-  admin_pass: asar5248
+  admin_pass: averkinswap
 
   AWS_ACCESS_KEY_ID: AKIAJNU3WUH5CUMKO7HQ
   AWS_SECRET_ACCESS_KEY: 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
