all fixtures ready, first passing test

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -13,6 +13,10 @@ development:
   <<: *defaults
   S3_BUCKET_NAME: swapart-development
 
+test:
+  <<: *defaults
+  S3_BUCKET_NAME: swapart-test
+
 production:
   <<: *defaults
   facebook_APP_ID: 709900169065252
