--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,11 +1,79 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
+user_11:
+  email: "netanyahu@gmail.com"
+  encrypted_password: "$2a$10$Ox2XG9aEo9TtAmrkl2rtBOMgwwcePwH9qfWW03F5yXWcIWrEFxEKO"
+  sign_in_count: 1
+  current_sign_in_at: "2014-07-20 19:16:19"
+  last_sign_in_at: "2014-07-20 19:16:19"
+  current_sign_in_ip: "127.0.0.1"
+  last_sign_in_ip: "127.0.0.1"
+  confirmed_at: "2014-07-20 19:16:19"
+  first_name: "בנימין"
+  last_name: "נתניהו"
+  is_active: true
+  is_blocked: false
+  region: region_11
+  phone: "0559977332"
 
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+user_21:
+  email: "lapid@gmail.com"
+  encrypted_password: "$2a$10$Ox2XG9aEo9TtAmrkl2rtBOMgwwcePwH9qfWW03F5yXWcIWrEFxEKO"
+  sign_in_count: 1
+  current_sign_in_at: "2014-07-20 19:16:19"
+  last_sign_in_at: "2014-07-20 19:16:19"
+  current_sign_in_ip: "127.0.0.1"
+  last_sign_in_ip: "127.0.0.1"
+  confirmed_at: "2014-07-20 19:16:19"
+  first_name: "יאיר"
+  last_name: "לפיד"
+  is_active: true
+  is_blocked: false
+  region: region_21
+  phone: "0511232322"
+
+user_31:
+  email: "yechimovich@gmail.com"
+  encrypted_password: "$2a$10$Ox2XG9aEo9TtAmrkl2rtBOMgwwcePwH9qfWW03F5yXWcIWrEFxEKO"
+  sign_in_count: 1
+  current_sign_in_at: "2014-07-20 19:16:19"
+  last_sign_in_at: "2014-07-20 19:16:19"
+  current_sign_in_ip: "127.0.0.1"
+  last_sign_in_ip: "127.0.0.1"
+  confirmed_at: "2014-07-20 19:16:19"
+  first_name: "שלי"
+  last_name: "יחימוביץ׳"
+  is_active: true
+  is_blocked: false
+  region: region_31
+  phone: "0544335532"
+
+user_41:
+  email: "saar@gmail.com"
+  encrypted_password: "$2a$10$Ox2XG9aEo9TtAmrkl2rtBOMgwwcePwH9qfWW03F5yXWcIWrEFxEKO"
+  sign_in_count: 1
+  current_sign_in_at: "2014-07-20 19:16:19"
+  last_sign_in_at: "2014-07-20 19:16:19"
+  current_sign_in_ip: "127.0.0.1"
+  last_sign_in_ip: "127.0.0.1"
+  confirmed_at: "2014-07-20 19:16:19"
+  first_name: "גדעון"
+  last_name: "סער"
+  is_active: true
+  is_blocked: false
+  region: region_31
+  phone: "0514533354"
+
+user_51:
+  email: "piron@gmail.com"
+  encrypted_password: "$2a$10$Ox2XG9aEo9TtAmrkl2rtBOMgwwcePwH9qfWW03F5yXWcIWrEFxEKO"
+  sign_in_count: 1
+  current_sign_in_at: "2014-07-20 19:16:19"
+  last_sign_in_at: "2014-07-20 19:16:19"
+  current_sign_in_ip: "127.0.0.1"
+  last_sign_in_ip: "127.0.0.1"
+  confirmed_at: "2014-07-20 19:16:19"
+  first_name: "שי"
+  last_name: "פירון"
+  is_active: true
+  is_blocked: false
+  region: region_21
+  phone: "0513323324"
