changed AWS access keys

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -6,8 +6,8 @@ defaults: &defaults
   facebook_APP_SECRET: 186254b8e75c3b16f576703b13b35e18
   admin_pass: averkinswap
 
-  AWS_ACCESS_KEY_ID: AKIAJNU3WUH5CUMKO7HQ
-  AWS_SECRET_ACCESS_KEY: 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
+  AWS_ACCESS_KEY_ID: AKIAJQWE7T7APR7BYWFQ
+  AWS_SECRET_ACCESS_KEY: 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
 
 development:
   <<: *defaults
