--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -6,8 +6,8 @@ defaults: &defaults
   facebook_APP_SECRET: 186254b8e75c3b16f576703b13b35e18
   admin_pass: averkinswap
 
-  AWS_ACCESS_KEY_ID: AKIAJQWE7T7APR7BYWFQ
-  AWS_SECRET_ACCESS_KEY: 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
+  AWS_ACCESS_KEY_ID: AKIA##DELME##JQWE7T7APR7BYWFQ##METOO##
+  AWS_SECRET_ACCESS_KEY: zvTJp##DELME##IguhfEi9AaVrn36mSmCU0CzbDcXADJ5Xebj##METOO##
 
 development:
   <<: *defaults
